changed the title for the yml file.

--- a/iddawgsfinalproject/_site.yml
+++ b/iddawgsfinalproject/_site.yml
@@ -1,7 +1,7 @@
 name: "iddawgs-finalproject"
 output_dir: "."
 navbar:
-  title: "Nicks website"
+  title: "ID Dawgs final project website"
   left:
     - text: "Home"
       href: index.html
